Propage exceptions and improve log.